--- a/app/src/main/res/layout/activity_all_tasks.xml
+++ b/app/src/main/res/layout/activity_all_tasks.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllTasks">
+    tools:context=".activities.AllTasks">
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="allIssues"
+        android:onClick="allTasks"
         android:text="123"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
